Added templates / imports

--- a/public_logged_in/code.html
+++ b/public_logged_in/code.html
@@ -86,6 +86,7 @@
 				<option disabled>-- Modes --</option>
 				<option selected>Vanilla HTML,CSS,JS</option>
 				<option>StylerML</option>
+				<option>Raw (Fetch Allowed)</option>
 			</select><br>
 			<button class='btn'>Create</button>
 		</form>
