--- a/public_not_logged_in/index.html
+++ b/public_not_logged_in/index.html
@@ -78,6 +78,7 @@
 	<div id='body'>
 		Sign up!<br><button class='btn' onclick='javascript:location="signup"'>Signup</button><br>
 		<img id="logo" src='assets/logo.png'>
+		<br><button class='btn' onclick='javascript:location="readme"'>Information</button><br>
 	</div>
 	<script>
 		if(location.hash != '#rd') {
